# gst-myjson

./: meson.build  readme.txt  test
gst-plugin/: meson.build
gst-plugin/src/: gstmyjson.c  gstmyjson.h
tests/: test.c
